# BORG-Launcher

./: .gitignore  README.md  build_release.bat  clear_icon_cache.bat  last_world.fmdata  news.md  tauri-dev.bat
buddy/: buddy_save.json
config/fancymenu/customization/: title_screen_layout.txt
dop/: 123 1.0.0.mrpack  news.md  photon_v1.3b.zip.txt
dop/config/: betterf3.toml
dop/config/bettercombat/: client.json5
dop/config/fancymenu/: animation_controller_states.json  customizablemenus.txt  normalized_scroll_screens.json  options.txt  video_element_controller_metas.json
dop/config/fancymenu/customization/: options_screen_layout.txt  pause_screen_layout.txt  title_screen_layout.txt  title_screen_layout_1.txt
dop/config/fancymenu/slideshows/myslideshow/: properties.txt
dop/config/inventoryprofilesnext/: inventoryprofiles.json
dop/fancymenu/: options.txt
launcher/: __init__.py  __main__.py  config.py  download.py  launch_game.py  main.py  mod_sync.py
tauri-launcher/: create_no_window.patch  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-launcher/src/: main-clean.ts  main-simple.ts  main.ts  styles.css
tauri-launcher/src-tauri/: Cargo.toml  tauri.conf.json
tauri-launcher/src-tauri/src/: main.rs
